# chemqulacs-gpu

./: .editorconfig  .gitignore  Doxyfile  LICENSE  Makefile  README.md  build.sh  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: doc.yml  release.yml  ubuntu_ci.yml
chemqulacs/cpp/: CMakeLists.txt
chemqulacs/cpp/ansatz/: ansatz.cpp  ansatz.hpp  ansatz_multi.cpp  ansatz_multi.hpp  gatefabric.cpp  gatefabric.hpp  pauli_exp.cpp  pauli_exp.hpp
chemqulacs/cpp/circuit/: add_gate.hpp  apply_matrix.hpp  circuit_element.hpp  optimize_update_qr.cpp  optimize_update_qr.hpp  parametric_matrix.hpp  pauli_rotation.hpp  swap_global_qubits.hpp  swap_local_qubits.hpp
chemqulacs/cpp/expectation/: communicate_swap.hpp  compute_dotproduct.hpp  compute_paulibasis.hpp  expectation_computer.cpp  expectation_computer.hpp  expectation_element.hpp
chemqulacs/cpp/mpi/: mpicomm.cpp
chemqulacs/cpp/pauli/: pauli_product.hpp  pauli_string.cpp  pauli_string.hpp
chemqulacs/cpp/pybind/: interface.py  pybind.cpp
chemqulacs/cpp/state/: state_vector.cpp  state_vector.hpp
chemqulacs/cpp/utils/: debug.hpp  execute_manager.cpp  execute_manager.hpp  precision.hpp  simulation_config.cpp  simulation_config.hpp  timer.cpp  timer.hpp
chemqulacs/cpp/vqe/: ccsd.py  converter.py  mp2.py  tapering.py  ucc.py  utils.py  vqeci.py  vqemcscf.py
chemqulacs/qmmm/: electrostatic.py
chemqulacs/qse/: qse.py
chemqulacs/resp/: resp.py  resp_helper.py
chemqulacs/util/: exception.py  gaussian_parser.py  mpiutils.py  utils.py
chemqulacs/vqemm/: vqemm.py
chemqulacs_cpp-stubs/: __init__.pyi
doc/dummy/: build_dummy.sh  chemqulacs_cpp.pyi  note.md  setup.py
doc/source/: chemqulacs.cpp.rst  chemqulacs.cpp.vqe.ccsd.rst  chemqulacs.cpp.vqe.converter.rst  chemqulacs.cpp.vqe.mp2.rst  chemqulacs.cpp.vqe.rst  chemqulacs.cpp.vqe.tapering.rst  chemqulacs.cpp.vqe.ucc.rst  chemqulacs.cpp.vqe.utils.rst  chemqulacs.cpp.vqe.vqeci.rst  chemqulacs.cpp.vqe.vqemcscf.rst  chemqulacs.qmmm.electrostatic.rst  chemqulacs.qmmm.rst  chemqulacs.qse.qse.rst  chemqulacs.qse.rst  chemqulacs.resp.resp.rst  chemqulacs.resp.resp_helper.rst  chemqulacs.resp.rst  chemqulacs.rst  chemqulacs.util.exception.rst  chemqulacs.util.gaussian_parser.rst  chemqulacs.util.mpiutils.rst  chemqulacs.util.rst  chemqulacs.util.utils.rst  chemqulacs.vqemm.rst  chemqulacs.vqemm.vqemm.rst  chemqulacs_cpp.rst  conf.py  index.rst  modules.rst
examples/01.runpyscf/: h2o_sto3g.py
examples/02.runvqe/: out.txt  run.sh  vqe_h2o_sto3g.py
examples/03.electrostatic/: h2o_electrostatic_potential.py  vpot.out
examples/04.vqe_with_pointcharges/: vqe_point_charges_h2o_sto3g.py
examples/05.resp/: vqe_resp_h2o_sto3g.py
examples/06.water_dimer/: solute.xyz  vpot.out  vqe_water_dimer_qmmm.py
examples/06.water_dimer/g16ref/: gaussian.inp  hoge.sh  inp  out  ref  run.sh  runGau02_wako.sh  test
examples/06.water_dimer/g16ref/qmmm.0/: job0.Fchk  job1.Fchk  job1.inp
examples/08.runvqe-mpicpp/: plot.py  run.py
singularity/: build_sandbox.sh  build_sif.sh  chemqulacs.def  convert_sandbox.sh  reinstall.sh  shell_sandbox.sh  test.sh
singularity/def/: chemqulacs_22.11_hpcx.def  chemqulacs_22.11_openmpi.def  chemqulacs_22.7.def  chemqulacs_23.3.def
singularity/mpiQulacs/: CMakeLists.txt
tests/: README.md  sample_gaussian_input.inp  test_utils_gaussian_parser.py  test_utils_pubchem.py
tests/ignore/: test_cuquantum.py  test_vqe_qmmm_electrostatic.py  test_vqe_qmmm_electrostatic_gpu.py  test_vqe_qmmm_electrostatic_mpigpu.py
