[project]
name = "chemqulacs"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dynamic = [
    "dependencies"
]
requires-python = ">=3.11, <4.0"

[tool.poetry]
requires-poetry = ">=2.1"
packages = [
    { include = "chemqulacs" },
    { include = "chemqulacs_cpp-stubs" }
]

[tool.poetry.dependencies]
pyscf = "^2.6.2"
openfermion = "^1.6.1"
openfermionpyscf = "^0.5"
numpy = "^1.22.5"
scipy = "^1.14.1"

##pyyaml
#pubchempy = "^1.0.4"
#fortranformat
cffi = "^1.17.0"
mpi4py = "^3.1.6"
Cython = "^3.0.12"
pybind11 = "^2.13.4"
line-profiler = "^4.1.3"
cupy-cuda11x = "^12.3.0"
cuquantum-python-cu11 = "^23.10.0"
cirq = "^1.4.0"
pennylane = "^0.32.0"
quket = {git = "https://github.com/quket/quket"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.15.0"
Sphinx = "^8.2.3"
sphinx-book-theme = "^1.1.3"
ipykernel = "^6.29.5"
ruff = "^0.11.2"
pybind11-stubgen = "^2.5.3"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["B","C","E","F","W"]
ignore = ["E741","E402","E501","C901"]
exclude = ["__init__.py"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
